--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,31 @@
+plugins {
+    id 'java'
+    id 'org.springframework.boot' version '2.4.5'
+}
 
 allprojects {
-	apply plugin: 'java'
 }
 
 subprojects {
-    repositories {
 
+    apply plugin: 'java'
+    apply plugin: 'org.springframework.boot'
+
+    repositories {
+        mavenLocal()
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
         maven { url 'http://uk.maven.org/maven2' }
-
-        mavenLocal()
-        mavenCentral()
-
         // JBoss Repo
         maven { url 'https://repository.jboss.org/nexus/content/groups/public-jboss/' }
+
+        mavenCentral()
     }
 
-    dependencies { 
-        compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
-        compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.30'
+    dependencies {
+        compile 'org.springframework.boot:spring-boot-starter:2.4.5'
         compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
         compile 'com.google.guava:guava:30.1.1-jre'
+        compile 'io.swagger:swagger-annotations:1.6.2'
         testCompile group: 'junit', name: 'junit', version: '4.13'
     }
 }
@@ -29,7 +34,13 @@ project(':spring_aop') {
 
     dependencies {
         compile 'cglib:cglib:3.3.0'
-        compile group: 'org.springframework', name: 'spring-core', version: '5.3.5'
+        compile 'aopalliance:aopalliance:1.0'
+        compile 'org.springframework.boot:spring-boot-starter'
+    }
+}
+
+project(':spring_ioc') {
+    dependencies {
     }
 }
 
