--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,11 @@ plugins {
     id 'org.springframework.boot' version '2.4.5'
 }
 
-subprojects {
-
+allprojects {
     apply plugin: 'java'
-    apply plugin: 'org.springframework.boot'
+}
+
+subprojects {
 
     repositories {
         mavenLocal()
@@ -19,7 +20,6 @@ subprojects {
     }
 
     dependencies {
-        compile 'org.springframework.boot:spring-boot-starter:2.4.5'
         compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
         compile 'com.google.guava:guava:30.1.1-jre'
         compile 'io.swagger:swagger-annotations:1.6.2'
@@ -28,12 +28,18 @@ subprojects {
 }
 
 project(':design_pattern') {
+    dependencies {
+    }
 }
 
-project(':spring_boot') {
+project(':spring_aop') {
+
+    apply plugin: 'org.springframework.boot'
 
     dependencies {
+        compile project(':design_pattern')
         compile 'cglib:cglib:3.3.0'
+        compile 'org.springframework.boot:spring-boot-starter:2.4.5'
         compile 'org.springframework.boot:spring-boot-starter-jdbc:2.4.5'
     }
 }
