--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ subprojects {
         compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
         compile 'com.google.guava:guava:30.1.1-jre'
         compile 'io.swagger:swagger-annotations:1.6.2'
-        compile group: 'junit', name: 'junit', version: '4.13'
+        compile 'org.junit.jupiter:junit-jupiter:5.7.2'
     }
 }
 
