--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ subprojects {
         implementation 'com.google.guava:guava:30.1.1-jre'
         implementation 'io.swagger:swagger-annotations:1.6.2'
         implementation 'org.junit.jupiter:junit-jupiter:5.7.2'
+        implementation 'org.apache.commons:commons-lang3:3.12.0'
     }
 }
 
@@ -74,4 +75,3 @@ project(':effective_java') {
     }
 
 }
-
