--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id 'java'
-    id "org.springframework.boot" version "2.4.5"
+    id "org.springframework.boot" version "2.7.0"
 }
 
-sourceCompatibility = 11
-targetCompatibility = 11
+sourceCompatibility = 17
+targetCompatibility = 17
 
 allprojects {
     apply plugin: 'java'
@@ -25,7 +25,8 @@ subprojects {
     dependencies {
         implementation 'commons-collections:commons-collections:3.2'
         implementation 'com.google.guava:guava:30.1.1-jre'
-        implementation 'io.swagger:swagger-annotations:1.6.2'
+        implementation 'io.swagger:swagger-annotations:1.6.6'
+        implementation 'io.swagger:swagger-models:1.6.6'
         implementation 'org.junit.jupiter:junit-jupiter:5.7.2'
         implementation 'org.apache.commons:commons-lang3:3.12.0'
     }
@@ -37,7 +38,7 @@ project(':spring_aop') {
 
     dependencies {
         implementation 'cglib:cglib:3.3.0'
-        implementation 'org.springframework.boot:spring-boot-starter:2.4.5'
+        implementation 'org.springframework.boot:spring-boot-starter:2.7.0'
     }
 }
 
@@ -46,7 +47,9 @@ project(':spring_web') {
     apply plugin: 'org.springframework.boot'
 
     dependencies {
-        implementation 'org.springframework.boot:spring-boot-starter-web:2.4.5'
+        implementation 'org.springframework.boot:spring-boot-starter-web:2.7.0'
+        implementation 'io.springfox:springfox-swagger2:2.9.2'
+        implementation 'io.springfox:springfox-swagger-ui:2.9.2'
         implementation 'com.squareup.okhttp3:okhttp:3.5.0'
     }
 }
@@ -56,8 +59,8 @@ project(':spring_security') {
     apply plugin: 'org.springframework.boot'
 
     dependencies {
-        implementation 'org.springframework.boot:spring-boot-starter-web:2.4.5'
-        implementation 'org.springframework.boot:spring-boot-starter-security:2.4.5'
+        implementation 'org.springframework.boot:spring-boot-starter-web:2.7.0'
+        implementation 'org.springframework.boot:spring-boot-starter-security:2.7.0'
     }
 }
 
@@ -72,6 +75,13 @@ project(':document') {
 
 project(':effective_java') {
     dependencies {
+    }
+
+}
+
+project(':spring_data_jpa') {
+    dependencies {
+        implementation 'org.springframework.data:spring-data-jpa:2.7.0'
     }
 
 }
