--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,7 @@ subprojects {
         mavenLocal()
         maven { url 'https://maven.aliyun.com/nexus/content/groups/public' }
         maven { url 'https://uk.maven.org/maven2' }
-        // JBoss Repo
         maven { url 'https://repository.jboss.org/nexus/content/groups/public-jboss/' }
-
         mavenCentral()
     }
 
@@ -27,8 +25,8 @@ subprojects {
         implementation 'com.google.guava:guava:30.1.1-jre'
         implementation 'io.swagger:swagger-annotations:1.6.6'
         implementation 'io.swagger:swagger-models:1.6.6'
-        implementation 'org.junit.jupiter:junit-jupiter:5.7.2'
         implementation 'org.apache.commons:commons-lang3:3.12.0'
+        implementation 'org.junit.jupiter:junit-jupiter:5.7.2'
     }
 }
 
@@ -83,5 +81,11 @@ project(':spring_data_jpa') {
     dependencies {
         implementation 'org.springframework.data:spring-data-jpa:2.7.0'
     }
+}
 
+project(':work') {
+    apply plugin: 'org.springframework.boot'
+    dependencies {
+        implementation 'org.springframework.data:spring-data-jpa:2.7.0'
+    }
 }
