--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ targetCompatibility = 17
 
 allprojects {
     apply plugin: 'java'
+
+    test {
+        useJUnitPlatform()
+    }
 }
 
 subprojects {
@@ -29,6 +33,8 @@ subprojects {
         implementation 'io.swagger:swagger-annotations:1.6.6'
         implementation 'io.swagger:swagger-models:1.6.6'
         implementation 'org.apache.commons:commons-lang3:3.12.0'
+        implementation 'org.jasypt:jasypt:1.9.3'
+        implementation 'org.projectlombok:lombok:1.18.24'
         implementation 'org.junit.jupiter:junit-jupiter:5.7.2'
     }
 }
@@ -36,6 +42,7 @@ subprojects {
 project(':spring_aop') {
 
     apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
 
     dependencies {
         implementation 'cglib:cglib:3.3.0'
@@ -46,6 +53,7 @@ project(':spring_aop') {
 project(':spring_web') {
 
     apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
 
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -56,9 +64,8 @@ project(':spring_web') {
 }
 
 project(':spring_security') {
-
     apply plugin: 'org.springframework.boot'
-
+    apply plugin: 'io.spring.dependency-management'
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter-web'
         implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -66,7 +73,6 @@ project(':spring_security') {
 }
 
 project(':document') {
-
     dependencies {
         implementation 'org.apache.poi:poi-examples:5.0.0'
         implementation 'org.apache.poi:poi:5.0.0'
@@ -77,12 +83,22 @@ project(':document') {
 project(':effective_java') {
     dependencies {
     }
-
 }
 
 project(':spring_data_jpa') {
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    }
+}
+
+project(':spring_data_elasticsearch') {
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+    dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
     }
 }
 
@@ -90,7 +106,11 @@ project(':work') {
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
     dependencies {
-        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+        implementation 'com.clickhouse:clickhouse-jdbc:0.3.2-patch11'
+        implementation 'io.github.pelenthium:clickhouse-dialect-spring-boot-starter:1.1.0'
         implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+        implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+        implementation 'io.springboot.plugin:jasypt-spring-boot-starter:3.1.0'
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
     }
 }
