添加分析模式&设计模式模块.

--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,12 @@ subprojects {
     }
 }
 
-project(':onjava') {
+project(':A1.analysis_pattern') {
+    dependencies {
+    }
+}
+
+project(':A2.design_pattern') {
     dependencies {
     }
 }
