--- a/B1.spring_boot/src/main/resources/application.yml
+++ b/B1.spring_boot/src/main/resources/application.yml
@@ -1,3 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:file:/Data/h2/test_db
+    url: jdbc:h2:mem:h2test
+    username: sa
+    password: sa
+    driver-class-name: org.h2.Driver
