--- a/build.gradle
+++ b/build.gradle
@@ -33,12 +33,20 @@ subprojects {
         implementation 'io.swagger:swagger-annotations:1.6.6'
         implementation 'io.swagger:swagger-models:1.6.6'
         implementation 'org.apache.commons:commons-lang3:3.12.0'
+        implementation 'org.apache.commons:commons-lang3:3.12.0'
+        implementation 'commons-codec:commons-codec:1.16.0'
         implementation 'org.jasypt:jasypt:1.9.3'
         implementation 'org.projectlombok:lombok:1.18.24'
 
         implementation 'com.github.javafaker:javafaker:1.0.2'
         implementation 'org.jeasy:easy-random-core:5.0.0'
-        testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+        implementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+    }
+}
+
+project(':A0.on_java') {
+    dependencies {
+
     }
 }
 
