--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,10 @@ include 'A0.on_java'
 include 'A1.analysis_pattern'
 include 'A2.design_pattern'
 include 'B1.spring_boot', 'spring_aop', 'spring_web', 'spring_web_security', 'spring_web_swagger2', 'z.effective_java', 'spring_data_jpa', 'spring_data_elasticsearch'
+include 'B1.spring_boot:core'
 include 'B1.spring_boot:mysql'
-findProject(':B1.spring_boot:mysql')?.name = 'mysql'
+include 'B1.spring_boot:redis'
 
+findProject(':B1.spring_boot:mysql')?.name = 'mysql'
+findProject(':B1.spring_boot:redis')?.name = 'redis'
+findProject(':B1.spring_boot:core')?.name = 'core'
