--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ subprojects {
 
 project(':A0.on_java') {
     dependencies {
+        implementation 'org.slf4j:slf4j-api:2.0.9'
+        implementation 'ch.qos.logback:logback-core:1.4.11'
+        implementation 'ch.qos.logback:logback-classic:1.4.11'
         implementation 'net.coobird:thumbnailator:0.4.20'
     }
 }
