--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 pluginManagement {
     repositories {
+        mavenCentral()
         maven { url 'https://repo.spring.io/milestone' }
         maven { url 'https://repo.spring.io/snapshot' }
         gradlePluginPortal()
@@ -13,8 +14,11 @@ include 'B1.spring_boot:core'
 include 'B1.spring_boot:mysql'
 include 'B1.spring_boot:redis'
 include 'B1.spring_boot:integration'
+include 'B1.spring_boot:axon'
 
 findProject(':B1.spring_boot:mysql')?.name = 'mysql'
 findProject(':B1.spring_boot:redis')?.name = 'redis'
 findProject(':B1.spring_boot:core')?.name = 'core'
 findProject(':B1.spring_boot:integration')?.name = 'integration'
+findProject(':B1.spring_boot:axon')?.name = 'axon'
+
