--- a/settings.gradle
+++ b/settings.gradle
@@ -15,10 +15,12 @@ include 'B1.spring_boot:mysql'
 include 'B1.spring_boot:redis'
 include 'B1.spring_boot:integration'
 include 'B1.spring_boot:axon'
+include 'B1.spring_boot:rule'
 
 findProject(':B1.spring_boot:mysql')?.name = 'mysql'
 findProject(':B1.spring_boot:redis')?.name = 'redis'
 findProject(':B1.spring_boot:core')?.name = 'core'
 findProject(':B1.spring_boot:integration')?.name = 'integration'
 findProject(':B1.spring_boot:axon')?.name = 'axon'
+findProject(':B1.spring_boot:rule')?.name = 'rule'
 
