--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ subprojects {
     }
 
     dependencies {
-        implementation 'commons-collections:commons-collections:3.2'
+        implementation 'org.apache.commons:commons-collections4:4.4'
         implementation 'com.google.guava:guava:30.1.1-jre'
         implementation 'io.swagger:swagger-annotations:1.6.6'
         implementation 'io.swagger:swagger-models:1.6.6'
@@ -36,6 +36,7 @@ subprojects {
         implementation 'commons-codec:commons-codec:1.16.0'
         implementation 'org.jasypt:jasypt:1.9.3'
         implementation 'org.projectlombok:lombok:1.18.24'
+        implementation 'io.vavr:vavr:1.0.0-alpha-4'
 
         implementation 'com.github.javafaker:javafaker:1.0.2'
         implementation 'org.jeasy:easy-random-core:5.0.0'
@@ -71,10 +72,16 @@ project(':B1.spring_boot') {
 
         dependencies {
             implementation 'org.springframework.boot:spring-boot-starter'
-            implementation 'org.springframework.boot:spring-boot-starter-integration'
+
             implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+            implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+            implementation 'org.springframework.boot:spring-boot-starter-integration'
             implementation 'org.springframework.integration:spring-integration-jdbc'
+
             implementation 'mysql:mysql-connector-java:8.0.28'
+            implementation 'org.hibernate:hibernate-core:6.4.0.CR1'
+            implementation 'org.hibernate:hibernate-validator:8.0.1.Final'
 
             testImplementation 'org.springframework.boot:spring-boot-starter-test'
         }
