--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ project(':A0.on_java') {
         implementation 'ch.qos.logback:logback-classic:1.4.11'
         implementation 'net.coobird:thumbnailator:0.4.20'
         implementation 'io.reactivex.rxjava3:rxjava:3.1.8'
+        implementation 'com.google.zxing:core:3.5.2'
     }
 }
 
