--- a/A1.JavaExtendSample/build.gradle
+++ b/A1.JavaExtendSample/build.gradle
@@ -27,6 +27,14 @@ dependencies {
     implementation 'commons-codec:commons-codec:1.16.0'
     implementation 'org.jasypt:jasypt:1.9.3'
     implementation 'io.vavr:vavr:1.0.0-alpha-4'
+
+    implementation 'org.slf4j:slf4j-api:2.0.9'
+    implementation 'ch.qos.logback:logback-core:1.4.11'
+    implementation 'ch.qos.logback:logback-classic:1.4.11'
+    implementation 'net.coobird:thumbnailator:0.4.20'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.8'
+    implementation 'com.google.zxing:core:3.5.2'
+
     implementation 'org.jeasy:easy-random-core:5.0.0'
     implementation 'org.junit.jupiter:junit-jupiter:5.9.1'
 }
