--- a/A1.JavaExtendSample/build.gradle
+++ b/A1.JavaExtendSample/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxjava:3.1.8'
     implementation 'com.google.zxing:core:3.5.2'
 
+    // markdown
+    implementation 'org.commonmark:commonmark:0.21.0'
+    implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'
+
     implementation 'org.jeasy:easy-random-core:5.0.0'
     implementation 'org.junit.jupiter:junit-jupiter:5.9.1'
 }
