--- a/A1.JavaExtendSample/build.gradle
+++ b/A1.JavaExtendSample/build.gradle
@@ -22,15 +22,15 @@ repositories {
 
 dependencies {
     implementation 'org.apache.commons:commons-collections4:4.4'
-    implementation 'com.google.guava:guava:30.1.1-jre'
+    implementation 'com.google.guava:guava:33.0.0-jre'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'commons-codec:commons-codec:1.16.0'
     implementation 'org.jasypt:jasypt:1.9.3'
     implementation 'io.vavr:vavr:1.0.0-alpha-4'
 
     implementation 'org.slf4j:slf4j-api:2.0.9'
-    implementation 'ch.qos.logback:logback-core:1.4.11'
-    implementation 'ch.qos.logback:logback-classic:1.4.11'
+    implementation 'ch.qos.logback:logback-core:1.4.12'
+    implementation 'ch.qos.logback:logback-classic:1.4.14'
     implementation 'net.coobird:thumbnailator:0.4.20'
     implementation 'io.reactivex.rxjava3:rxjava:3.1.8'
     implementation 'com.google.zxing:core:3.5.2'
@@ -38,6 +38,10 @@ dependencies {
     // markdown
     implementation 'org.commonmark:commonmark:0.21.0'
     implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'
+
+    //asciiDoctor
+    implementation 'org.asciidoctor:asciidoctorj:2.4.0'
+
 
     implementation 'org.jeasy:easy-random-core:5.0.0'
     implementation 'org.junit.jupiter:junit-jupiter:5.9.1'
