spring-ai-gemini-sample

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,11 @@
-.gradle
 build
-.classpath
-.project
-*.iml
+.DS_Store
 .idea
+.gradle
 gradlew
 gradlew.bat
-gradle/
-workspace
-*.class
-*.settings
-out
-bin
-settings.json
-application-encrypted.yml
-.DS_Store
-worker
+**/common-config.yml
+LICENSE
+temp.txt
+temp.json
+gradle
